@startuml
'https://plantuml.com/class-diagram




class ConsultUsersInTheWaitingRoomUI

class ConsultUsersInTheWaitingRoomController{
+getVaccinationCenter()
+listOfUsersInTheWaitingRoom(VaccinationCenter vaccinationCenter)
}

class Arrivals

class VaccinationCenter

class Company

class SnsUser


left to right direction

ConsultUsersInTheWaitingRoomUI .> ConsultUsersInTheWaitingRoomController
ConsultUsersInTheWaitingRoomController ..> Arrivals
ConsultUsersInTheWaitingRoomController .r.> Company
Company -> SnsUser
ConsultUsersInTheWaitingRoomController ..> VaccinationCenter
VaccinationCenter->Arrivals


@enduml